# Otus_Lab_1

./: .gitignore  CMakeLists.txt  Configure.cmd  README.md  doxygen.conf.in
.github/workflows/: C++ CI.yml
Main/: CMakeLists.txt
Main/src/: main.cpp
lib/: CMakeLists.txt  stdafx.h
lib/include/: CustomIpPrint.h  DoubleLinkList.h  IpPool.h  SimpleCustomAllocator.h  ipV4.h  pretty.h  stringTools.h
lib/src/: DoubleLinkList.cpp  IpPool.cpp  ipV4.cpp  stringTools.cpp
test/: CMakeLists.txt
test/src/: test_version.cpp
